--- a/file1.yaml
+++ b/file1.yaml
@@ -1,34 +1,11 @@
 apiVersion: v1
-kind: Service
+kind: POD
 metadata:
-  name: my-nginx-svc
+  name: nginx-pod
   labels:
     app: nginx
 spec:
-  type: LoadBalancer
-  ports:
-  - port: 80
-  selector:
-    app: nginx
----
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: my-nginx
-  labels:
-    app: nginx
-spec:
-  replicas: 3
-  selector:
-    matchLabels:
-      app: nginx
-  template:
-    metadata:
-      labels:
-        app: nginx
-    spec:
-      containers:
-      - name: nginx
-        image: nginx:1.14.2
-        ports:
-        - containerPort: 80
+  containers:
+     -name: nginx-containers
+      image: nginx
+
